Removing unused variables, states, and imports

--- a/investmate-web-app/package.json
+++ b/investmate-web-app/package.json
@@ -11,8 +11,9 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "react-router": "latest"
-
+    "react-router": "latest",
+    "classnames": "latest",
+    "classnames": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
